@@ -416,9 +416,9 @@ typedef struct heapframe {
   int Xlength;
   int Xmax;
   int Xmin;
-  int Xnumber;
+  unsigned int Xnumber;
   int Xoffset;
-  int Xop;
+  unsigned int Xop;
   int Xsave_capture_last;
   int Xsave_offset1, Xsave_offset2, Xsave_offset3;
   int Xstacksave[REC_STACK_SAVE_MAX];
@@ -634,7 +634,7 @@ int max;
 int min;
 unsigned int number;
 int offset;
-pcre_uchar op;
+unsigned int op;
 int save_capture_last;
 int save_offset1, save_offset2, save_offset3;
 int stacksave[REC_STACK_SAVE_MAX];
